2019/02/25 ver1.8.8
Open with default browser
Lang menu

2019/02/25 ver1.8.7
Raw Focus

2019/02/24 ver1.8.6
Remove -browseremulation arg when it has been changed and restarted

2019/02/23 ver1.8.5
Window menu

2019/02/23 ver1.8.4
Add x64

2019/02/22 ver1.8.3
Tray Icon
More browser emulation mode

2019/02/20 ver1.8.2
Any Windows can alive if the parent closes.
I18N

2019/02/16 ver1.8.1
Size of newly opened window

2018/05/30 ver1.7
change status bar width
edit help

2018/05/23 ver1.6
Suppress flicker of menu displaying URL

2018/05/14 ver1.5
Show command line option error

2018/05/03 ver1.4
status bar
command line

2018/04/27 ver1.3
No script feature

2018/04/19 ver1.2
*.url arg can be accepted
Drag and Drop

2018/01/08 ver1.1
Command line option "browseremulation"

2017/12/29 ver1.0