@@ -66,6 +66,7 @@ public:
 //	afx_msg void OnUpdateUrl(CCmdUI *pCmdUI);
 	afx_msg void OnDestroy();
 	afx_msg void OnWindowClosebutthis();
+	afx_msg void OnSetFocus(CWnd* pOldWnd);
 };
 
 /////////////////////////////////////////////////////////////////////////////
