@@ -176,7 +176,7 @@ CAPTION "About SimpBrowser"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,21,20
-    LTEXT           "SimpBrowser Version 1.8.8",IDC_STATIC,40,10,119,8,SS_NOPREFIX
+    LTEXT           "SimpBrowser Version 1.8.9",IDC_STATIC,40,10,119,8,SS_NOPREFIX
     LTEXT           "Copyright (C) 2019",IDC_STATIC,40,25,119,8
     DEFPUSHBUTTON   "OK",IDOK,178,7,50,14,WS_GROUP
     EDITTEXT        IDC_EDIT_HELP,7,41,221,116,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
@@ -197,7 +197,7 @@ END
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,8,8,0
+ PRODUCTVERSION 1,8,9,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -215,10 +215,10 @@ BEGIN
             VALUE "FileDescription", "SimpBrowser MFC Application"
             VALUE "FileVersion", "1, 0, 0, 1"
             VALUE "InternalName", "SimpBrowser"
-            VALUE "LegalCopyright", "Copyright (C) 2015"
+            VALUE "LegalCopyright", "Copyright (C) 2019"
             VALUE "OriginalFilename", "SimpBrowser.EXE"
             VALUE "ProductName", "SimpBrowser Application"
-            VALUE "ProductVersion", "1.8.8.0"
+            VALUE "ProductVersion", "1.8.9.0"
         END
     END
     BLOCK "VarFileInfo"
