@@ -1,3 +1,6 @@
+2019/02/26 ver1.8.9
+Fix: Wrong Focus
+
 2019/02/25 ver1.8.8
 Open with default browser
 Lang menu
